--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -149,3 +149,18 @@
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
+.shadow{
+  direction: rtl;
+}
+
+@media (max-width: 767.98px) {
+  .shadow{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+  }
+  .box2 , .box3{
+    display:none;
+  }
+}
